force-app/main/default/objects/Financial_Analyses__c/fields/SD_Burn_Off_Date_02__c.field-meta.xml
<CustomField>
    <fullName>SD_Burn_Off_Date_02__c</fullName>
    <label>SD Burn Off Date 02</label>
    <type>Date</type>
</CustomField>