force-app/main/default/objects/Financial_Analyses__c/fields/Signage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Signage_Cost__c</fullName>
    <label>Signage Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>