force-app/main/default/objects/Financial_Analyses__c/fields/Signage_Delta__c.field-meta.xml
<CustomField>
    <fullName>Signage_Delta__c</fullName>
    <formula>Signage_Cost__c  + Signage_Allowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signage Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>