force-app/main/default/objects/Financial_Analyses__c/fields/Tandem_Covered__c.field-meta.xml
<CustomField>
    <fullName>Tandem_Covered__c</fullName>
    <label>Tandem Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>