force-app/main/default/objects/Financial_Analyses__c/fields/Tandem_Structure__c.field-meta.xml
<CustomField>
    <fullName>Tandem_Structure__c</fullName>
    <label>Tandem Structure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>