force-app/main/default/objects/Financial_Analyses__c/fields/Tenancy_Type__c.field-meta.xml
<CustomField>
    <fullName>Tenancy_Type__c</fullName>
    <label>Tenancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Tenant</fullName>
            </value>
            <value>
                <fullName>Sublandlord</fullName>
            </value>
            <value>
                <fullName>Subtenant</fullName>
            </value>
            <value>
                <fullName>Coworking Tenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>