force-app/main/default/objects/Financial_Analyses__c/fields/TI_Build_Cost_per_RSF__c.field-meta.xml
<CustomField>
    <fullName>TI_Build_Cost_per_RSF__c</fullName>
    <label>TI Build Cost per RSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>