force-app/main/default/objects/Financial_Analyses__c/fields/TI_Contingency__c.field-meta.xml
<CustomField>
    <fullName>TI_Contingency__c</fullName>
    <label>TI Contingency</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>