force-app/main/default/objects/Financial_Analyses__c/fields/TI_Delta_per_RSF__c.field-meta.xml
<CustomField>
    <fullName>TI_Delta_per_RSF__c</fullName>
    <formula>Total_TI_Cost_per_R_SF__c -  TI_Allowance_per_RSF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI Delta per RSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>