force-app/main/default/objects/Financial_Analyses__c/fields/TI_Supervision_Fee__c.field-meta.xml
<CustomField>
    <fullName>TI_Supervision_Fee__c</fullName>
    <label>TI Supervision Fee</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>