force-app/main/default/objects/Financial_Analyses__c/fields/Total_Parking_Cost_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Parking_Cost_per_Month__c</fullName>
    <formula>( Valet__c * V_Cost_per_Stall_per_Month__c ) +
( Reserved_Structure__c * RS_Cost_per_Stall_per_Month__c ) +
( Reserved_Covered__c * RC_Cost_per_Stall_per_Month__c ) +
( Reserved_Lot__c * RL_Cost_per_Stall_per_Month__c ) +
( Unreserved_Structure__c * US_Cost_per_Stall_per_Month__c ) +
( Unreserved_Covered__c * UC_Cost_per_Stall_per_Month__c ) +
( Unreserved_Lot__c * UL_Cost_per_Stall_per_Month__c ) +
( Tandem_Structure__c * TS_Cost_per_Stall_per_Month__c ) +
( Tandem_Covered__c * TC_Cost_per_Stall_per_Month__c ) +
( Tandem_Lot__c * TL_Cost_per_Stall_per_Month__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Parking Cost per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>