force-app/main/default/objects/Financial_Analyses__c/fields/Total_Parking_Stalls__c.field-meta.xml
<CustomField>
    <fullName>Total_Parking_Stalls__c</fullName>
    <formula>Valet__c + Reserved_Structure__c  +  Reserved_Covered__c  + Reserved_Lot__c +  Unreserved_Structure__c +  Unreserved_Covered__c +  Unreserved_Lot__c +  Tandem_Structure__c  + Tandem_Covered__c +  Tandem_Lot__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Parking Stalls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>