force-app/main/default/objects/Financial_Analyses__c/fields/Total_TI_Cost_per_R_SF__c.field-meta.xml
<CustomField>
    <fullName>Total_TI_Cost_per_R_SF__c</fullName>
    <formula>(( TI_Build_Cost_per_RSF__c ) * ( 1 +  TI_Supervision_Fee__c )) * ( 1 +  TI_Contingency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total TI Cost per RSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>