force-app/main/default/objects/Financial_Analyses__c/fields/TS_Cost_per_Stall_per_Month__c.field-meta.xml
<CustomField>
    <fullName>TS_Cost_per_Stall_per_Month__c</fullName>
    <label>TS Cost per Stall per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>