force-app/main/default/objects/Financial_Analyses__c/fields/Unreserved_Covered__c.field-meta.xml
<CustomField>
    <fullName>Unreserved_Covered__c</fullName>
    <label>Unreserved Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>