force-app/main/default/objects/Financial_Analyses__c/fields/Unreserved_Lot__c.field-meta.xml
<CustomField>
    <fullName>Unreserved_Lot__c</fullName>
    <label>Unreserved Lot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>