force-app/main/default/objects/Financial_Analyses__c/fields/Valet__c.field-meta.xml
<CustomField>
    <fullName>Valet__c</fullName>
    <label>Valet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>