force-app/main/default/objects/Financial_Analyses__c/fields/Yearly_Parking_Increase__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Parking_Increase__c</fullName>
    <label>Yearly Parking Increase</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>