force-app/main/default/objects/Financial_Analyses__c/recordTypes/Base_Rent_Free_Rent.recordType-meta.xml
<RecordType>
    <fullName>Base_Rent_Free_Rent</fullName>
    <active>true</active>
    <label>Base Rent + Free Rent</label>
</RecordType>