force-app/main/default/objects/Financial_Analyses__c/recordTypes/Rent_Schedule.recordType-meta.xml
<RecordType>
    <fullName>Rent_Schedule</fullName>
    <active>false</active>
    <label>Rent Schedule</label>
</RecordType>